# thermal-printer

./: Cargo.toml  README.md  data.yaml  shell.nix
assets/: CommandCodes.md  QrCode Notes.txt
src/: destinations.rs  main.rs
src/printer/: bitmap.rs  commands.rs  commands_extend.rs  mod.rs
